<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.home.HomeFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_photo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="34dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:src="@drawable/ic_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcome_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_welcome"
        android:textSize="12sp"
        android:visibility="gone"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toEndOf="@id/image_photo"
        app:layout_constraintTop_toTopOf="@id/image_photo"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_visit"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toEndOf="@id/image_photo"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_home"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_category"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_photo"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        tools:listitem="@layout/item_home_category"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_recommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Meus livros"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_category"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recommended"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_home_recommended"
        app:layout_constraintTop_toBottomOf="@id/tv_recommended"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>